# ad-platform

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml
docs/: architecture.md
docs/openapi/: README.md  ads-api-openapi.yaml  auth-api-openapi.yaml
infra/: docker-compose.yml  env.example
infra/ansible/: README.md  playbook.yml  requirements.yml
infra/ansible/group_vars/: all.yml  development.yml  production.yml
infra/ansible/inventory/: development.yml  production.yml  staging.yml
infra/grafana/provisioning/dashboards/: simple_api_dashboard.json
infra/mysql/: .my.cnf
infra/prometheus/: prometheus.yml
infra/scripts/: check_env.sh  create_clickhouse_db.sh  init_tarantool.lua
services/admin-panel/: pyproject.toml
services/admin-panel/project/: settings.py
services/ads-api/: Dockerfile  go.mod  go.sum
services/ads-api/cmd/server/: main.go
services/ads-api/internal/handler/: ad.go  campaign.go  creative.go  errors.go  middleware.go  (+1 more)
services/ads-api/migrations/: 001_create_campaigns.sql  002_create_ads.sql
services/analytics-api/: Dockerfile  pyproject.toml
services/analytics-api/app/: main.py
services/analytics-api/app/api/: analytics.py
services/analytics-api/app/core/: config.py  rabbitmq.py
services/analytics-api/app/db/: clickhouse.py
services/analytics-api/tests/: test_smoke.py
services/auth-api/: Dockerfile  alembic.ini  pyproject.toml
services/auth-api/alembic/: env.py
services/auth-api/alembic/versions/: 714cf48329fa_add_ads_core_tables.py  a1e1ae57334c_add_transaction_id_to_ads_and_creatives.py  cc526acb00ec_create_users.py
services/auth-api/app/: main.py
services/auth-api/app/api/: auth.py  billing.py
services/auth-api/app/core/: rabbitmq.py  security.py
services/auth-api/app/db/: session.py
services/auth-api/app/models/: ad.py  balance.py  campaign.py  creative.py  transaction.py  user.py
services/auth-api/tests/: test_security.py  test_smoke.py
services/workers/worker-go/: Dockerfile  go.mod  main.go
services/workers/worker-py/: Dockerfile  requirements.txt  worker.py
(+73 files in other folders)
