[tool.poetry]
name = "analytics-api"
version = "0.1.0"
description = "Analytics service"
authors = ["Dan"]

package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
