[tool.poetry]
name = "analytics-api"
version = "0.1.0"
description = "Analytics service"
authors = ["Dan"]

packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
clickhouse-connect = "^0.8.0"
aioredis = "^2.0.0"
aio-pika = "^9.0.0"
pydantic-settings = "^2.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.27.0"